--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -122,6 +124,22 @@
     "dataset = datasets.ImageFolder(data_path)\n",
     "print(f\"num samples: {len(dataset)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[8][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -220,9 +238,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dataset[8][0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
