Add dictionaries to create subsets

--- a/Untitled-Copy1.ipynb
+++ b/Untitled-Copy1.ipynb
@@ -2204,6 +2204,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ottengo una lista delle persone nel training set\n",
+    "people_train = []\n",
+    "for item in train_list:\n",
+    "    item = item.split()\n",
+    "    people_train.append(item[0])\n",
+    "people_train = list(dict.fromkeys(people_train[1:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(test_path, 'r') as file:\n",
+    "  test_file = file.read()\n",
+    "\n",
+    "test_list = test_file.split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ottengo una lista delle persone nel test set\n",
+    "people_test = []\n",
+    "for item in test_list:\n",
+    "    item = item.split()\n",
+    "    people_test.append(item[0])\n",
+    "people_test = list(dict.fromkeys(people_test[1:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num. training samples: 1519\n",
+      "Num. test samples: 696\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Num. training samples: {len(people_train)}\")\n",
+    "print(f\"Num. test samples: {len(people_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 81,
    "metadata": {
     "collapsed": true
